--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,30 @@
         </plugins>
     </build>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>2.9.2</version>
+        </dependency>
 
     <dependency>
+        <groupId>org.apache.hbase</groupId>
+        <artifactId>hbase</artifactId>
+        <version>1.4.8</version>
+        <type>pom</type>
+    </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>1.4.8</version>
+        </dependency>
+
+
+
+        <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
@@ -42,5 +64,6 @@
         <scope>compile</scope>
     </dependency>
 
+    </dependencies>
 
 </project>
