--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,17 @@
             <version>1.4.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.8.2</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.mongodb.spark</groupId>
+            <artifactId>mongo-spark-connector_2.11</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
         <dependency>
         <groupId>junit</groupId>
